--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <center>
 <table cellspacing="30">
 	<tr>
-		<td><br><img src="me.jpg" alt="me" height="300px"></td>
+		<td><br><img src="me.JPG" alt="me" height="300px"></td>
 		<td>
 			<center>
 				<p>My name is Daniel, and I'm an aspiring photographer from Texas.
@@ -46,7 +46,7 @@
 			<br>Thank you for taking the time to visiting my website and viewing my photos.
 			</center>
 		</td>
-		<td><img src="me1.jpg" alt="me" height="300px"></td>
+		<td><img src="me1.JPG" alt="me" height="300px"></td>
 	</tr>
 </table>
 </center>
