--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <center>
-		<a href="file:///S:/concept/photography/homepage.html"><img src="banner.jpg" alt="Banner"></a>
+		<a href="DanielsPhotography/index.html"><img src="banner.jpg" alt="Banner"></a>
 </center>
 <hr>
 	<body>
@@ -18,8 +18,8 @@
 	<table cellspacing="30">
 		<tr>
 			<td><a href="DanielsPhotography/Gallery.html">GALLERY</a></td>
-			<td><a href="file:///S:/concept/photography/Equipment.html">EQUIPMENT</a></td>
-			<td><a href="file:///S:/concept/photography/Contact.html">CONTACT ME</a></td>
+			<td><a href="DanielsPhotography/Equipment.html">EQUIPMENT</a></td>
+			<td><a href="DanielsPhotography/Contact.html">CONTACT ME</a></td>
 		</tr>
 	</table>
 </center>
