--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <center>
 	<table cellspacing="30">
 		<tr>
-			<td><a href="DanielsPhotography/Gallery.html">GALLERY</a></td>
+			<td><a href="<repository>DanielsPhotography/Gallery.html">GALLERY</a></td>
 			<td><a href="DanielsPhotography/Equipment.html">EQUIPMENT</a></td>
 			<td><a href="DanielsPhotography/Contact.html">CONTACT ME</a></td>
 		</tr>
