--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <center>
-		<a href="DanielsPhotography/index.html"><img src="banner.jpg" alt="Banner"></a>
+		<a href="index.html"><img src="banner.jpg" alt="Banner"></a>
 </center>
 <hr>
 	<body>
