--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <center>
 	<table cellspacing="30">
 		<tr>
-			<td><a href"Gallery.html">GALLERY</a></td>
-			<td><a href="DanielsPhotography/Equipment.html">EQUIPMENT</a></td>
+			<td><a href"Gallery.HTML">GALLERY</a></td>
+			<td><a href="DanielsPhotography/Equipment.HTML">EQUIPMENT</a></td>
 			<td><a href="DanielsPhotography/Contact.html">CONTACT ME</a></td>
 		</tr>
 	</table>
