--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<tr>
 			<td><a href="DanielsPhotography/Gallery.HTML">GALLERY</a></td>
 			<td><a href="DanielsPhotography/Equipment.HTML">EQUIPMENT</a></td>
-			<td><a href="DanielsPhotography/Contact.html">CONTACT ME</a></td>
+			<td><a href="DanielsPhotography/Contact.HTML">CONTACT ME</a></td>
 		</tr>
 	</table>
 </center>
