--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <center>
-		<a href="DanielsPhotography/index.HTML/"><img src="banner.jpg" alt="Banner"></a>
+		<a href="index.HTML/"><img src="banner.jpg" alt="Banner"></a>
 </center>
 <hr>
 	<body>
@@ -17,9 +17,9 @@
 <center>
 	<table cellspacing="30">
 		<tr>
-			<td><a href="DanielsPhotography/Gallery.HTML">GALLERY</a></td>
-			<td><a href="DanielsPhotography/Equipment.HTML">EQUIPMENT</a></td>
-			<td><a href="DanielsPhotography/Contact.HTML">CONTACT ME</a></td>
+			<td><a href="Gallery.HTML">GALLERY</a></td>
+			<td><a href="Equipment.HTML">EQUIPMENT</a></td>
+			<td><a href="Contact.HTML">CONTACT ME</a></td>
 		</tr>
 	</table>
 </center>
