--- a/Gallery.html
+++ b/Gallery.html
@@ -10,15 +10,15 @@
 	</body>
 </html>
 <center>
-		<a href="DanielsPhotography/index.html"><img src="banner.jpg" alt="Banner"></a>
+		<a href="index.html"><img src="banner.jpg" alt="Banner"></a>
 		<hr>
 </center>
 <center>
 	<table cellspacing="30">
 		<tr>
-			<td><a href="DanielsPhotography/Gallery.html">GALLERY</a></td>
-			<td><a href="DanielsPhotography/Equipment.html">EQUIPMENT</a></td>
-			<td><a href="DanielsPhotography/Contact.html">CONTACT ME</a></td>
+			<td><a href="Gallery.html">GALLERY</a></td>
+			<td><a href="Equipment.html">EQUIPMENT</a></td>
+			<td><a href="Contact.html">CONTACT ME</a></td>
 		</tr>
 	</table>
 	<hr>
