--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
 </center>
 <center>
 	<p>Email me at amery.bur410@gmail.com</p>
-	<a href="https://www.instagram.com/texas.photography94/">Follow us on Instagram</a>
+	<a href="https://www.instagram.com/texas.photography94/">Follow me on Instagram</a>
 	<hr>
 	<form action="mailto:amery.bur410@gmail.com" method="post" enctype="text/plain">
 		<label>Your Name:</label><br>
