--- a/Gallery.html
+++ b/Gallery.html
@@ -26,7 +26,7 @@
 </center>
 <center>
 		<h1>Theme Parks</h1>
-			<img src="Epcotspaceshipearth.jpg" alt="Spaceshipearth" height="200px">
+			<img src="Epcotspaceshipearth.JPG" alt="Spaceshipearth" height="200px">
 			<img src="artofdisney.jpg" alt="Artofdisney" height="200px">
 			<img src="cinderella castle3.jpg" alt="Castle" height="200px"><br>
 				<img src="japan.jpg" alt="japan" height="200px">
