--- a/Gallery.html
+++ b/Gallery.html
@@ -28,7 +28,7 @@
 		<h1>Theme Parks</h1>
 			<img src="Epcotspaceshipearth.JPG" alt="Spaceshipearth" height="200px">
 			<img src="artofdisney.jpg" alt="Artofdisney" height="200px">
-			<img src="cinderella castle3.jpg" alt="Castle" height="200px"><br>
+			<img src="cinderella castle3.JPG" alt="Castle" height="200px"><br>
 				<img src="japan.jpg" alt="japan" height="200px">
 				<img src="rockin.jpg" alt="rockinrollercoaster" height="200px">
 				<img src="treeoflife.jpg" alt="tree" height="200px">
@@ -63,7 +63,7 @@
 				<img src="tiger.jpg" alt="tiger" height="200px"><br>
 					<img src="zebra.jpg" alt="zebra" height="200px">
 					<img src="bird.jpg" alt="bird" height="200px">
-					<img src="turtle.jpg" alt="turtle" height="200px">
+					<img src="turtle.JPG" alt="turtle" height="200px">
 					<img src="Penguin.jpg" alt="penguin" height="200px"><br>
 						<img src="jellys.jpg" alt="jellyfish" height="200px">
 						<img src="wilddog.jpg" alt="wilddogs" height="200px">
@@ -79,9 +79,9 @@
 <hr>
 <center>
 	<h1>Cars and Trucks</h1>
-		<img src="challenger.jpg" alt="challenger" height="200px">
-		<img src="challenger2.jpg" alt="challenger" height="200px">
-		<img src="challenger3.jpg" alt="challenger" height="200px"><br>
+		<img src="challenger.JPG" alt="challenger" height="200px">
+		<img src="challenger2.JPG" alt="challenger" height="200px">
+		<img src="challenger3.JPG" alt="challenger" height="200px"><br>
 			<img src="c8.jpg" alt="corvette" height="200px">
 			<img src="corvette2.jpg" alt="corvette" height="200px">
 			<img src="corvette.jpg" alt="corvette" height="200px">
