--- a/Gallery.html
+++ b/Gallery.html
@@ -82,8 +82,8 @@
 		<img src="challenger.JPG" alt="challenger" height="200px">
 		<img src="challenger2.JPG" alt="challenger" height="200px">
 		<img src="challenger3.JPG" alt="challenger" height="200px"><br>
-			<img src="c8.jpg" alt="corvette" height="200px">
-			<img src="corvette2.jpg" alt="corvette" height="200px">
+			<img src="C8.jpg" alt="corvette" height="200px">
+			<img src="corvette2.JPG" alt="corvette" height="200px">
 			<img src="corvette.jpg" alt="corvette" height="200px">
 			<img src="vette.jpg" alt="corvette" height="200px"><br>
 				<img src="truck.jpg" alt="truck" height="200px">
