--- a/Gallery.html
+++ b/Gallery.html
@@ -67,7 +67,7 @@
 					<img src="Penguin.jpg" alt="penguin" height="200px"><br>
 						<img src="jellys.jpg" alt="jellyfish" height="200px">
 						<img src="wilddog.jpg" alt="wilddogs" height="200px">
-						<img src="jaguar.jpg" alt="jaguar" height="200px"><br>
+						<img src="Jaguar.jpg" alt="jaguar" height="200px"><br>
 							<img src="Flamingo.jpg" alt="flamino" height="200px">
 							<img src="giraffe.jpg" alt="giraffe" height="200px">
 							<img src="Pelican.jpg" alt="pelican" height="200px">
@@ -89,14 +89,14 @@
 				<img src="truck.jpg" alt="truck" height="200px">
 				<img src="truck5.jpg" alt="truck" height="200px">
 				<img src="truck1.jpg" alt="truck" height="200px">
-				<img src="truck2.jpg" alt="truck" height="200px">
-				<img src="truck3.jpg" alt="truck" height="200px"><br>
-					<img src="car1.jpg" alt="car" height="200px">
+				<img src="truck2.JPG" alt="truck" height="200px">
+				<img src="truck3.JPG" alt="truck" height="200px"><br>
+					<img src="car1.JPG" alt="car" height="200px">
 					<img src="car2.jpg" alt="car" height="200px">
 					<img src="car3.jpg" alt="car" height="200px">
 					<img src="car4.jpg" alt="car" height="200px"><br>
 					<img src="audi.jpg" alt="audi" height="200px">
-					<img src="general lee.jpg" alt="general lee" height="200px">
-					<img src="general lee1.jpg" alt="general lee" height="200px">
+					<img src="General lee.jpg" alt="general lee" height="200px">
+					<img src="General lee1.jpg" alt="general lee" height="200px">
 
 </center>
