--- a/WildLife.html
+++ b/WildLife.html
@@ -10,7 +10,7 @@
 	</body>
 </html>
 <center>
-		<a href="file:///S:/concept/photography/homepage.html"><img src="banner.jpg" alt="Banner"></a>
+		<a href="index.html.html"><img src="banner.jpg" alt="Banner"></a>
 		<hr>
 </center>
 <center>
@@ -27,9 +27,9 @@
 <center>
 	<table cellspacing="5">
 		<tr>
-			<td><a href="file:///S:/concept/photography/ThemeParks.html"><h3>Theme Parks</h3></a></td>
-			<td><a href="file:///S:/concept/photography/WildLife.html"><h3>Wild Life</h3></a></td>
-			<td><a href="file:///S:/concept/photography/CarsandTrucks.html"><h3>Cars and Trucks</h3></a></td>
+			<td><a href="ThemeParks.html"><h3>Theme Parks</h3></a></td>
+			<td><a href="WildLife.html"><h3>Wild Life</h3></a></td>
+			<td><a href="CarsandTrucks.html"><h3>Cars and Trucks</h3></a></td>
 		</tr>
 	</table>
 	<hr>
