--- a/CarsandTrucks.html
+++ b/CarsandTrucks.html
@@ -10,15 +10,15 @@
 	</body>
 </html>
 <center>
-		<a href="file:///S:/concept/photography/homepage.html"><img src="banner.jpg" alt="Banner"></a>
+		<a href="index.html"><img src="banner.jpg" alt="Banner"></a>
 		<hr>
 </center>
 <center>
 	<table cellspacing="30">
 		<tr>
-			<td><a href="file:///S:/concept/photography/Gallery.html"><h1>GALLERY</h1></a></td>
-			<td><a href="file:///S:/concept/photography/Equipment.html"><h1>EQUIPMENT</h1></a></td>
-			<td><a href="file:///S:/concept/photography/Contact.html"><h1>CONTACT ME</h></a></td>
+			<td><a href="Gallery.html"><h1>GALLERY</h1></a></td>
+			<td><a href="Equipment.html"><h1>EQUIPMENT</h1></a></td>
+			<td><a href="Contact.html"><h1>CONTACT ME</h></a></td>
 		</tr>
 	</table>
 	<hr>
@@ -27,9 +27,9 @@
 <center>
 	<table cellspacing="5">
 		<tr>
-			<td><a href="file:///S:/concept/photography/ThemeParks.html"><h3>Theme Parks</h3></a></td>
-			<td><a href="file:///S:/concept/photography/WildLife.html"><h3>Wild Life</h3></a></td>
-			<td><a href="file:///S:/concept/photography/CarsandTrucks.html"><h3>Cars and Trucks</h3></a></td>
+			<td><a href="ThemeParks.html"><h3>Theme Parks</h3></a></td>
+			<td><a href="WildLife.html"><h3>Wild Life</h3></a></td>
+			<td><a href="CarsandTrucks.html"><h3>Cars and Trucks</h3></a></td>
 		</tr>
 	</table>
 	<hr>
