--- a/WildLife.html
+++ b/WildLife.html
@@ -16,9 +16,9 @@
 <center>
 	<table cellspacing="30">
 		<tr>
-			<td><a href="file:///S:/concept/photography/Gallery.html"><h1>GALLERY</h1></a></td>
-			<td><a href="file:///S:/concept/photography/Equipment.html"><h1>EQUIPMENT</h1></a></td>
-			<td><a href="file:///S:/concept/photography/Contact.html"><h1>CONTACT ME</h></a></td>
+			<td><a href="Gallery.html"><h1>GALLERY</h1></a></td>
+			<td><a href="Equipment.html"><h1>EQUIPMENT</h1></a></td>
+			<td><a href="Contact.html"><h1>CONTACT ME</h></a></td>
 		</tr>
 	</table>
 	<hr>
