--- a/ThemeParks.html
+++ b/ThemeParks.html
@@ -37,9 +37,9 @@
 </center>
 <center>
 		<h2>Theme Parks</h2>
-			<img src="Epcotspaceshipearth.jpg" alt="Spaceshipearth" height="200px">
+			<img src="Epcotspaceshipearth.JPG" alt="Spaceshipearth" height="200px">
 			<img src="artofdisney.jpg" alt="Artofdisney" height="200px">
-			<img src="cinderella castle3.jpg" alt="Castle" height="200px"><br>
+			<img src="Cinderella castle3.jpg" alt="Castle" height="200px"><br>
 				<img src="japan.jpg" alt="japan" height="200px">
 				<img src="rockin.jpg" alt="rockinrollercoaster" height="200px">
 				<img src="treeoflife.jpg" alt="tree" height="200px">
