--- a/Contact.html
+++ b/Contact.html
@@ -14,14 +14,15 @@
 		<hr>
 </center>
 <center>
-	<table cellspacing="30">
+	<table cellspacing="15">
 		<tr>
-			<td><a href="Gallery.html">GALLERY</a></td>
-			<td><a href="Equipment.html">EQUIPMENT</a></td>
-			<td><a href="Contact.html">CONTACT ME</a></td>
+			<td><a href="Gallery.html"><h1>GALLERY</h1></a></td>
+			<td><a href="Equipment.html"><h1>EQUIPMENT</h1></a></td>
+			<td><a href="Contact.html"><h1>CONTACT ME</h></a></td>
 		</tr>
 	</table>
 	<hr>
+
 </center>
 <center>
 	<p>Email me at amery.bur410@gmail.com</p>
