--- a/Gallery.html
+++ b/Gallery.html
@@ -14,11 +14,11 @@
 		<hr>
 </center>
 <center>
-	<table cellspacing="30">
+	<table cellspacing="15">
 		<tr>
-			<td><a href="Gallery.html">GALLERY</a></td>
-			<td><a href="Equipment.html">EQUIPMENT</a></td>
-			<td><a href="Contact.html">CONTACT ME</a></td>
+			<td><a href="Gallery.html"><h1>GALLERY</h1></a></td>
+			<td><a href="Equipment.html"><h1>EQUIPMENT</h1></a></td>
+			<td><a href="Contact.html"><h1>CONTACT ME</h></a></td>
 		</tr>
 	</table>
 	<hr>
@@ -27,9 +27,9 @@
 <center>
 	<table cellspacing="15">
 		<tr>
-			<td><a href="file:///S:/concept/photography/ThemeParks.html"><center><h3>Theme Parks</h3></center><br><img src="Cinderella castle3.jpg" alt="Castle" height="200px"></a></td>
-			<td><a href="file:///S:/concept/photography/WildLife.html"><center><h3>Wild Life</h3></center><br><img src="Turtle.jpg" alt="turtle" height="200px"></a></td>
-			<td><a href="file:///S:/concept/photography/CarsandTrucks.html"><center><h3>Cars and Trucks</h3></center><br><img src="truck.JPG" alt="truck" height="200px"></a></td>
+			<td><a href="ThemeParks.html"><center><h3>Theme Parks</h3></center><br><img src="Cinderella castle3.jpg" alt="Castle" height="200px"></a></td>
+			<td><a href="WildLife.html"><center><h3>Wild Life</h3></center><br><img src="Turtle.jpg" alt="turtle" height="200px"></a></td>
+			<td><a href="CarsandTrucks.html"><center><h3>Cars and Trucks</h3></center><br><img src="truck.JPG" alt="truck" height="200px"></a></td>
 		</tr>
 	</table>
 	</center>
