--- a/Gallery.html
+++ b/Gallery.html
@@ -29,7 +29,7 @@
 		<tr>
 			<td><a href="ThemeParks.html"><center><h3>Theme Parks</h3></center><br><img src="Cinderella castle3.jpg" alt="Castle" height="200px"></a></td>
 			<td><a href="WildLife.html"><center><h3>Wild Life</h3></center><br><img src="Turtle.jpg" alt="turtle" height="200px"></a></td>
-			<td><a href="CarsandTrucks.html"><center><h3>Cars and Trucks</h3></center><br><img src="truck.JPG" alt="truck" height="200px"></a></td>
+			<td><a href="CarsandTrucks.html"><center><h3>Cars and Trucks</h3></center><br><img src="truck.jpg" alt="truck" height="200px"></a></td>
 		</tr>
 	</table>
 	</center>
