--- a/CarsandTrucks.html
+++ b/CarsandTrucks.html
@@ -37,23 +37,23 @@
 </center>
 <center>
 <h2>Cars and Trucks</h2>
-  		<img src="Challenger.JPG" alt="challenger" height="200px">
-		<img src="Challenger2.JPG" alt="challenger" height="200px">
-		<img src="challenger3.JPG" alt="challenger" height="200px"><br>
-			<img src="C8.jpg" alt="corvette" height="200px">
-			<img src="corvette2.JPG" alt="corvette" height="200px">
-			<img src="corvette.jpg" alt="corvette" height="200px">
-			<img src="vette.jpg" alt="corvette" height="200px"><br>
-				<img src="truck.jpg" alt="truck" height="200px">
-				<img src="truck5.jpg" alt="truck" height="200px">
-				<img src="truck1.jpg" alt="truck" height="200px">
-				<img src="truck2.JPG" alt="truck" height="200px">
-				<img src="truck3.JPG" alt="truck" height="200px"><br>
-					<img src="car1.JPG" alt="car" height="200px">
-					<img src="car2.jpg" alt="car" height="200px">
-					<img src="car3.jpg" alt="car" height="200px">
-					<img src="car4.jpg" alt="car" height="200px"><br>
-					<img src="audi.jpg" alt="audi" height="200px">
-					<img src="General lee.jpg" alt="general lee" height="200px">
-					<img src="General lee1.jpg" alt="general lee" height="200px">
+  		<img class="images" src="Challenger.JPG" alt="challenger" height="200px">
+		<img class="images" src="Challenger2.JPG" alt="challenger" height="200px">
+		<img class="images" src="challenger3.JPG" alt="challenger" height="200px"><br>
+			<img class="images" src="C8.jpg" alt="corvette" height="200px">
+			<img class="images" src="corvette2.JPG" alt="corvette" height="200px">
+			<img class="images" src="corvette.jpg" alt="corvette" height="200px">
+			<img class="images" src="vette.jpg" alt="corvette" height="200px"><br>
+				<img class="images" src="truck.jpg" alt="truck" height="200px">
+				<img class="images" src="truck5.jpg" alt="truck" height="200px">
+				<img class="images"  src="truck1.jpg" alt="truck" height="200px">
+				<img class="images" src="truck2.JPG" alt="truck" height="200px">
+				<img class="images" src="truck3.JPG" alt="truck" height="200px"><br>
+					<img class="images" src="car1.JPG" alt="car" height="200px">
+					<img class="images" src="car2.jpg" alt="car" height="200px">
+					<img class="images" src="car3.jpg" alt="car" height="200px">
+					<img class="images"src="car4.jpg" alt="car" height="200px"><br>
+					<img class="images" src="audi.jpg" alt="audi" height="200px">
+					<img class="images" src="General lee.jpg" alt="general lee" height="200px">
+					<img class="images" src="General lee1.jpg" alt="general lee" height="200px">
 </center>
