--- a/ThemeParks.html
+++ b/ThemeParks.html
@@ -38,26 +38,27 @@
 <center>
 		<h2>Theme Parks</h2>
 			<img class="images"src="Epcotspaceshipearth.JPG" alt="Spaceshipearth" height="200px">
-			<img class="images src="artofdisney.jpg" alt="Artofdisney" height="200px">
-			<img class="images src="Cinderella castle3.jpg" alt="Castle" height="200px"><br>
-				<img class="images src="japan.jpg" alt="japan" height="200px">
-				<img class="images src="rockin.jpg" alt="rockinrollercoaster" height="200px">
-				<img class="images src="treeoflife.jpg" alt="tree" height="200px">
-				<img class="images src="towerofterror.jpg" alt="tower" height="200px"><br>
-					<img class="images src="worldofdisney.jpg" alt="disney" height="200px">
-					<img class="images src="minnie.jpg" alt="minnie" height="200px">
-					<img class="images src="legowoody.jpg" alt="woody" height="200px"><br>
-						<img class="images src="monorail.jpg" alt="monorail" height="200px">
-						<img class="images src="buzz.jpg" alt="buzz" height="200px">
-						<img class="images src="greatmovieride.jpg" alt="greatmovieride" height="200px"><br>
-						<img class="images src="peterpan.jpg" alt="peterpan" height="200px">
-						<img class="images src="speedway.jpg" alt="speedway" height="200px">
-						<img class="images src="pinkepcot.jpg" alt="pinkepcot" height="200px"><br>
-							<img class="images src="Splash Mountain.jpg" alt="splashmountain" height="200px">
-							<img class="images src="stormtrooper.jpg" alt="stormtrooper" height="200px">
-							<img class="images src="statuemmmm.jpg" alt="minnie" height="200px"><br>
-								<img class="images src="HWS.jpg" alt="hollywoodstudios" height="200px">
-								<img class="images src="Planthollywood.jpg" alt="Planedhollywood" height="200px">
-								<img class="images src="mickeyminnie.jpg" alt="minnie" height="200px"><br>
-									<img class="images src="disneyquest.jpg" alt="disneyquest" height="200px">
-									<img class="images src="aladdin.jpg" alt="aladdin" height="200px">
+			<img class="images" src="artofdisney.jpg" alt="Artofdisney" height="200px">
+			<img class="images" src="Cinderella castle3.jpg" alt="Castle" height="200px"><br>
+				<img class="images" src="japan.jpg" alt="japan" height="200px">
+				<img class="images" src="rockin.jpg" alt="rockinrollercoaster" height="200px">
+				<img class="images" src="treeoflife.jpg" alt="tree" height="200px">
+				<img class="images" src="towerofterror.jpg" alt="tower" height="200px"><br>
+					<img class="images" src="worldofdisney.jpg" alt="disney" height="200px">
+					<img class="images" src="minnie.jpg" alt="minnie" height="200px">
+					<img class="images" src="legowoody.jpg" alt="woody" height="200px"><br>
+						<img class="images" src="monorail.jpg" alt="monorail" height="200px">
+						<img class="images" src="buzz.jpg" alt="buzz" height="200px">
+						<img class="images" src="greatmovieride.jpg" alt="greatmovieride" height="200px"><br>
+						<img class="images" src="peterpan.jpg" alt="peterpan" height="200px">
+						<img class="images" src="speedway.jpg" alt="speedway" height="200px">
+						<img class="images" src="pinkepcot.jpg" alt="pinkepcot" height="200px"><br>
+							<img class="images" src="Splash Mountain.jpg" alt="splashmountain" height="200px">
+							<img class="images" src="stormtrooper.jpg" alt="stormtrooper" height="200px">
+							<img class="images" src="statuemmmm.jpg" alt="minnie" height="200px"><br>
+								<img class="images" src="HWS.jpg" alt="hollywoodstudios" height="200px">
+								<img class="images" src="Planthollywood.jpg" alt="Planedhollywood" height="200px">
+								<img class="images" src="mickeyminnie.jpg" alt="minnie" height="200px"><br>
+									<img class="images" src="disneyquest.jpg" alt="disneyquest" height="200px">
+									<img class="images" src="aladdin.jpg" alt="aladdin" height="200px">
+</center>
