--- a/WildLife.html
+++ b/WildLife.html
@@ -37,25 +37,25 @@
 </center>
 <center>
 	<h2>WildLife</h2>
-			<img class="images src="cheetah.jpg" alt="sleeping" height="200px">
-			<img class="images src="dolphins.jpg" alt="dolphins" height="200px">
-			<img class="images src="fish.jpg" alt="fish" height="200px"></br>
-				<img class="images src="giraffe2.jpg" alt="Giraffe" height="200px">
-				<img class="images src="lion2.jpg" alt="lion sleeping" height="200px">
-				<img class="images src="stingray5.jpg" alt="stingray" height="200px">
-				<img class="images src="tiger.jpg" alt="tiger" height="200px"><br>
-					<img class="images src="zebra.jpg" alt="zebra" height="200px">
-					<img class="images src="bird.jpg" alt="bird" height="200px">
-					<img class="images src="Turtle.jpg" alt="turtle" height="200px">
-					<img class="images src="Penguin.jpg" alt="penguin" height="200px"><br>
-						<img class="images src="jellys.jpg" alt="jellyfish" height="200px">
-						<img class="images src="wilddog.jpg" alt="wilddogs" height="200px">
-						<img class="images src="Jaguar.jpg" alt="jaguar" height="200px"><br>
-							<img class="images src="Flamingo.jpg" alt="flamino" height="200px">
-							<img class="images src="giraffe.jpg" alt="giraffe" height="200px">
-							<img class="images src="Pelican.jpg" alt="pelican" height="200px">
-							<img class="images src="wilddogs.jpg" alt="wilddogs" height="200px"><br>
-								<img class="images src="jaguar1.jpg" alt="jaguar" height="200px">
-								<img class="images src="Snake.jpg" alt="snake" height="200px">
-								<img class="images src="turtleandcroc.jpg" alt="turtleandcroc" height="200px">
+			<img class="images" src="cheetah.jpg" alt="sleeping" height="200px">
+			<img class="images" src="dolphins.jpg" alt="dolphins" height="200px">
+			<img class="images" src="fish.jpg" alt="fish" height="200px"></br>
+				<img class="images" src="giraffe2.jpg" alt="Giraffe" height="200px">
+				<img class="images" src="lion2.jpg" alt="lion sleeping" height="200px">
+				<img class="images" src="stingray5.jpg" alt="stingray" height="200px">
+				<img class="images" src="tiger.jpg" alt="tiger" height="200px"><br>
+					<img class="images" src="zebra.jpg" alt="zebra" height="200px">
+					<img class="images" src="bird.jpg" alt="bird" height="200px">
+					<img class="images" src="Turtle.jpg" alt="turtle" height="200px">
+					<img class="images" src="Penguin.jpg" alt="penguin" height="200px"><br>
+						<img class="images" src="jellys.jpg" alt="jellyfish" height="200px">
+						<img class="images" src="wilddog.jpg" alt="wilddogs" height="200px">
+						<img class="images" src="Jaguar.jpg" alt="jaguar" height="200px"><br>
+							<img class="images" src="Flamingo.jpg" alt="flamino" height="200px">
+							<img class="images" src="giraffe.jpg" alt="giraffe" height="200px">
+							<img class="images" src="Pelican.jpg" alt="pelican" height="200px">
+							<img class="images" src="wilddogs.jpg" alt="wilddogs" height="200px"><br>
+								<img class="images" src="jaguar1.jpg" alt="jaguar" height="200px">
+								<img class="images" src="Snake.jpg" alt="snake" height="200px">
+								<img class="images" src="turtleandcroc.jpg" alt="turtleandcroc" height="200px">
   </center>
