--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
 </center>
 <center>
 	<p>Email me at amery.bur410@gmail.com</p>
-	<a href="https://www.instagram.com/texas.photography94/">Follow me on Instagram</a>
+	<a href="https://www.instagram.com/texas.photography94/">Follow me on Instagram</a><br>
 	<a href="https://twitter.com/texasphotograp7">Follow me on Twitter</a>
 	<hr>
 	<form action="mailto:amery.bur410@gmail.com" method="post" enctype="text/plain">
