--- a/Macro.html
+++ b/Macro.html
@@ -38,15 +38,15 @@
 </center>s
     <center>
     <h2>Macro</h2>
-	<img class="images" src="macro/sunflowerleaves.JPG" alt="challenger" height="200px">
-	<img class="images" src="macro/bloom.jpg" alt="challenger" height="200px">
-	<img class="images" src="macro/sunflower.jpg" alt="challenger" height="200px"><br>
-		<img class="images" src="macro/bloom1.jpg" alt="challenger" height="200px">
-		<img class="images" src="macro/bloom2.jpg" alt="challenger" height="200px">
-		<img class="images" src="macro/bloom3.jpg" alt="challenger" height="200px"><br>
-			<img class="images" src="macro/ladybug.JPG" alt="challenger" height="200px">
-			<img class="images" src="macro/ladybug1.JPG" alt="challenger" height="200px">
-			<img class="images" src="macro/ladybug2.JPG" alt="challenger" height="200px"><br>
-				<img class="images" src="macro/ladybug5.JPG" alt="challenger" height="200px">
-				<img class="images" src="macro/newseedling.jpg" alt="challenger" height="200px">
+	<img class="images" src="Macro/sunflowerleaves.JPG" alt="challenger" height="200px">
+	<img class="images" src="Macro/bloom.jpg" alt="challenger" height="200px">
+	<img class="images" src="Macro/sunflower.jpg" alt="challenger" height="200px"><br>
+		<img class="images" src="Macro/bloom1.jpg" alt="challenger" height="200px">
+		<img class="images" src="Macro/bloom2.jpg" alt="challenger" height="200px">
+		<img class="images" src="Macro/bloom3.jpg" alt="challenger" height="200px"><br>
+			<img class="images" src="Macro/ladybug.JPG" alt="challenger" height="200px">
+			<img class="images" src="Macro/ladybug1.JPG" alt="challenger" height="200px">
+			<img class="images" src="Macro/ladybug2.JPG" alt="challenger" height="200px"><br>
+				<img class="images" src="Macro/ladybug5.JPG" alt="challenger" height="200px">
+				<img class="images" src="Macro/newseedling.jpg" alt="challenger" height="200px">
     </center>
