--- a/Gallery.html
+++ b/Gallery.html
@@ -30,6 +30,7 @@
 			<td><a href="ThemeParks.html"><center><h3>Theme Parks</h3></center><br><img class="images" src="Cinderella castle3.jpg" alt="Castle" height="200px"></a></td>
 			<td><a href="WildLife.html"><center><h3>Wild Life</h3></center><br><img class="images" src="Turtle.jpg" alt="turtle" height="200px"></a></td>
 			<td><a href="CarsandTrucks.html"><center><h3>Cars and Trucks</h3></center><br><img class="images"src="truck.jpg" alt="truck" height="200px"></a></td>
+			<td><a href="Macro.html"><center><h3>Macro</h3></center><br><img class="images" src="macro/ladybug.jpg" alt="ladybug" height="200px"></a></td>
 		</tr>
 	</table>
 	</center>
