--- a/Macro.html
+++ b/Macro.html
@@ -48,5 +48,9 @@
 			<img class="images" src="Macro/ladybug1.JPG" alt="challenger" height="200px">
 			<img class="images" src="Macro/ladybug2.JPG" alt="challenger" height="200px"><br>
 				<img class="images" src="Macro/ladybug5.JPG" alt="challenger" height="200px">
-				<img class="images" src="Macro/newseedling.jpg" alt="challenger" height="200px">
+	    			<img class="images" src="Macro/s5.JPG" alt="challenger" height="200px">
+				<img class="images" src="Macro/newseedling.jpg" alt="challenger" height="200px"><br>
+	    				<img class="images" src="Macro/s1.JPG" alt="challenger" height="200px">
+	    				<img class="images" src="Macro/s.JPG" alt="challenger" height="200px">
+	    				<img class="images" src="Macro/s3.jpg" alt="challenger" height="200px">
     </center>
