--- a/Macro.html
+++ b/Macro.html
@@ -52,5 +52,5 @@
 				<img class="images" src="Macro/newseedling.jpg" alt="challenger" height="200px"><br>
 	    				<img class="images" src="Macro/s1.JPG" alt="challenger" height="200px">
 	    				<img class="images" src="Macro/s.JPG" alt="challenger" height="200px">
-	    				<img class="images" src="Macro/s3.jpg" alt="challenger" height="200px">
+	    				<img class="images" src="Macro/s3.JPG" alt="challenger" height="200px">
     </center>
