--- a/WildLife.html
+++ b/WildLife.html
@@ -10,7 +10,7 @@
 	</body>
 </html>
 <center>
-		<a href="index.html.html"><img src="banner.jpg" alt="Banner"></a>
+		<a href="index.html"><img src="banner.jpg" alt="Banner"></a>
 		<hr>
 </center>
 <center>
